Added new Bootstrap theme, changed Register page

--- a/Musicstore/Musicstore/Content/Site.css
+++ b/Musicstore/Musicstore/Content/Site.css
@@ -1,12 +1,11 @@
 ﻿body {
-    padding-top: 50px;
-    padding-bottom: 20px;
+    /*padding-top: 60px;
+    padding-bottom: 20px;*/
 }
 
 /* Set padding to keep content from hitting the edges */
 .body-content {
-    padding-left: 15px;
-    padding-right: 15px;
+    /*padding-left: 15px;*/
 }
 
 /* Override the default bootstrap behavior where horizontal description lists 
@@ -21,4 +20,8 @@ input,
 select,
 textarea {
     max-width: 280px;
+}
+
+.col-md-2{
+    padding-right: 0px !important;
 }
