--- a/Musicstore/Musicstore/Views/Account/ExternalLoginConfirmation.cshtml
+++ b/Musicstore/Musicstore/Views/Account/ExternalLoginConfirmation.cshtml
@@ -9,12 +9,14 @@
 {
     @Html.AntiForgeryToken()
 
+    @ViewBag.ExternalInfo
+
     <h4>Association Form</h4>
     <hr />
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
     <p class="text-info">
         You've successfully authenticated with <strong>@ViewBag.LoginProvider</strong>.
-        Please enter a user name for this site below and click the Register button to finish
+        Please enter a email address for this site below and click the Register button to finish
         logging in.
     </p>
     <div class="form-group">
