Added table Publisher, view, model and controller for it.

--- a/Musicstore/Musicstore/Views/Account/ExternalLoginConfirmation.cshtml
+++ b/Musicstore/Musicstore/Views/Account/ExternalLoginConfirmation.cshtml
@@ -1,4 +1,4 @@
-﻿@model Musicstore.Models.ExternalLoginConfirmationViewModel
+﻿@model Musicstore.ViewModels.ExternalLoginConfirmationViewModel
 @{
     ViewBag.Title = "Register";
 }
