--- a/Musicstore/Musicstore/Views/Account/ForgotPassword.cshtml
+++ b/Musicstore/Musicstore/Views/Account/ForgotPassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model Musicstore.Models.ForgotPasswordViewModel
+﻿@model Musicstore.ViewModels.ForgotPasswordViewModel
 @{
     ViewBag.Title = "Forgot your password?";
 }
