--- a/Musicstore/Musicstore/Views/Account/Register.cshtml
+++ b/Musicstore/Musicstore/Views/Account/Register.cshtml
@@ -1,5 +1,5 @@
-﻿@using Musicstore.Models
-@model Musicstore.Models.RegisterViewModel
+﻿@using Musicstore.ViewModels
+@model Musicstore.ViewModels.RegisterViewModel
 @{
     ViewBag.Title = "Register";
 }
