--- a/Musicstore/Musicstore/Views/Account/ResetPassword.cshtml
+++ b/Musicstore/Musicstore/Views/Account/ResetPassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model Musicstore.Models.ResetPasswordViewModel
+﻿@model Musicstore.ViewModels.ResetPasswordViewModel
 @{
     ViewBag.Title = "Reset password";
 }
