--- a/Musicstore/Musicstore/Views/Account/VerifyCode.cshtml
+++ b/Musicstore/Musicstore/Views/Account/VerifyCode.cshtml
@@ -1,4 +1,4 @@
-﻿@model Musicstore.Models.VerifyCodeViewModel
+﻿@model Musicstore.ViewModels.VerifyCodeViewModel
 @{
     ViewBag.Title = "Verify";
 }
