--- a/Musicstore/Musicstore/Content/Site.css
+++ b/Musicstore/Musicstore/Content/Site.css
@@ -22,6 +22,18 @@ textarea {
     max-width: 280px;
 }
 
-.col-md-2{
+.col-md-2 {
     padding-right: 0px !important;
+}
+
+a, a:hover {
+    text-decoration: none !important;
+}
+
+    a:hover {
+        color: #3375b0;
+    }
+
+.margin-bottom-10 {
+    margin-bottom: 10px;
 }
