--- a/Musicstore/Musicstore/Views/Manage/ManageLogins.cshtml
+++ b/Musicstore/Musicstore/Views/Manage/ManageLogins.cshtml
@@ -9,7 +9,7 @@
 <p class="text-success">@ViewBag.StatusMessage</p>
 @{
     var loginProviders = Context.GetOwinContext().Authentication.GetExternalAuthenticationTypes();
-    if (loginProviders.Count() == 0) {
+    if(loginProviders.Count() == 0) {
         <div>
             <p>
                 There are no external authentication services configured. See <a href="http://go.microsoft.com/fwlink/?LinkId=313242">this article</a>
@@ -17,22 +17,17 @@
             </p>
         </div>
     }
-    else
-    {
-        if (Model.CurrentLogins.Count > 0)
-        {
+    else {
+        if(Model.CurrentLogins.Count > 0) {
             <h4>Registered Logins</h4>
             <table class="table">
                 <tbody>
-                    @foreach (var account in Model.CurrentLogins)
-                    {
+                    @foreach(var account in Model.CurrentLogins) {
                         <tr>
                             <td>@account.LoginProvider</td>
                             <td>
-                                @if (ViewBag.ShowRemoveButton)
-                                {
-                                    using (Html.BeginForm("RemoveLogin", "Manage"))
-                                    {
+                                @if(ViewBag.ShowRemoveButton) {
+                                    using(Html.BeginForm("RemoveLogin", "Manage")) {
                                         @Html.AntiForgeryToken()
                                         <div>
                                             @Html.Hidden("loginProvider", account.LoginProvider)
@@ -41,8 +36,7 @@
                                         </div>
                                     }
                                 }
-                                else
-                                {
+                                else {
                                     @: &nbsp;
                                 }
                             </td>
@@ -51,18 +45,23 @@
                 </tbody>
             </table>
         }
-        if (Model.OtherLogins.Count > 0)
-        {
-            using (Html.BeginForm("LinkLogin", "Manage"))
-            {
+        if(Model.OtherLogins.Count > 0) {
+            using(Html.BeginForm("LinkLogin", "Manage")) {
                 @Html.AntiForgeryToken()
                 <div id="socialLoginList">
-                <p>
-                    @foreach (AuthenticationDescription p in Model.OtherLogins)
-                    {
-                        <button type="submit" class="btn btn-default" id="@p.AuthenticationType" name="provider" value="@p.AuthenticationType" title="Log in using your @p.Caption account">@p.AuthenticationType</button>
-                    }
-                </p>
+                    <p>
+                        @foreach(AuthenticationDescription p in Model.OtherLogins) {
+                            if(p.AuthenticationType.Equals("Google")) {
+                                <button type="submit" class="btn btn-warning" id="@p.AuthenticationType" name="provider" value="@p.AuthenticationType" title="Log in using your @p.Caption account">@p.AuthenticationType+</button>
+                            }
+                            else if(p.AuthenticationType.Equals("Facebook")) {
+                                <button type="submit" class="btn btn-primary" id="@p.AuthenticationType" name="provider" value="@p.AuthenticationType" title="Log in using your @p.Caption account">@p.AuthenticationType</button>
+                            }
+                            else {
+                                <button type="submit" class="btn btn-default" id="@p.AuthenticationType" name="provider" value="@p.AuthenticationType" title="Log in using your @p.Caption account">@p.AuthenticationType</button>
+                            }
+                        }
+                    </p>
                 </div>
             }
         }
