Changed favicon for real

--- a/Musicstore/Musicstore/Views/Shared/_Layout.cshtml
+++ b/Musicstore/Musicstore/Views/Shared/_Layout.cshtml
@@ -6,7 +6,7 @@
     <title>@ViewBag.Title - Musicstore</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
-
+    <link rel="icon" href="@Url.Content("~/Content/favicon.ico")" />
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-static-top">
