--- a/Musicstore/Musicstore/Content/Site.css
+++ b/Musicstore/Musicstore/Content/Site.css
@@ -26,14 +26,26 @@ textarea {
     padding-right: 0px !important;
 }
 
-a, a:hover {
+a:hover, a {
     text-decoration: none !important;
 }
 
-    a:hover {
-        color: #3375b0;
-    }
+a:hover {
+    color: #3375b0;
+}
 
 .margin-bottom-10 {
     margin-bottom: 10px;
+}
+
+.margin-bottom-3 {
+    margin-bottom: 3px;
+}
+
+footer ul li a {
+    color: #666;
+}
+
+footer ul li a:hover {
+    color: #400;
 }
