--- a/Musicstore/Musicstore/Views/Account/_ExternalLoginsListPartial.cshtml
+++ b/Musicstore/Musicstore/Views/Account/_ExternalLoginsListPartial.cshtml
@@ -1,4 +1,4 @@
-﻿@model Musicstore.Models.ExternalLoginListViewModel
+﻿@model Musicstore.ViewModels.ExternalLoginListViewModel
 @using Microsoft.Owin.Security
 
 <h4>Use another service to log in</h4>
