--- a/Musicstore/Musicstore/Views/Shared/_Layout.cshtml
+++ b/Musicstore/Musicstore/Views/Shared/_Layout.cshtml
@@ -29,13 +29,58 @@
             </div>
         </div>
     </div>
-    <div class="container body-content">
+    <div class="container body-content" style="height: 100%;">
         @RenderBody()
-        <footer class="modal-footer">
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
-        </footer>
     </div>
-
+    <footer class="container panel-footer">
+        <div class="row">
+            <div class="col-md-2 text-left">
+                <p class="margin-bottom-3"><strong>Publisher</strong></p>
+                <ul class="list-unstyled text-muted">
+                    <li><a href="#">See publishers</a></li>
+                    <li><a href="#">Are you a publisher?</a></li>
+                </ul>
+            </div>
+            <div class="col-md-2 text-left">
+                <p class="margin-bottom-3"><strong>API</strong></p>
+                <ul class="list-unstyled text-muted">
+                    <li><a href="#">Get API</a></li>
+                    <li><a href="#">Docs</a></li>
+                    <li><a href="#">Bugs</a></li>
+                    <li><a href="#">Any suggestions?</a></li>
+                </ul>
+            </div>
+            <div class="col-md-2 text-left">
+                <p class="margin-bottom-3"><strong>Music store</strong></p>
+                <ul class="list-unstyled text-muted">
+                    <li>@Html.ActionLink("About", "About", "Home")</li>
+                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                </ul>
+            </div>
+            <div class="col-md-2 text-left">
+                <p class="margin-bottom-3"><strong>Partners</strong></p>
+                <ul class="list-unstyled text-muted">
+                    <li><a href="#">List of partners</a></li>
+                    <li><a href="#">Become a partner</a></li>
+                </ul>
+            </div>
+            <div class="col-md-2 text-left">
+                <p class="margin-bottom-3"><strong>Mobile</strong></p>
+                <ul class="list-unstyled text-muted">
+                    <li><a href="#">Android</a></li>
+                    <li><a href="#">iOS</a></li>
+                    <li><a href="#">Windows phone</a></li>
+                </ul>
+            </div>
+            <div class="col-md-2 text-left">
+                <p class="margin-bottom-3"><strong>Univerzitet Metropolitan</strong></p>
+                <ul class="list-unstyled text-muted">
+                    <li><a href="http://metropolitan.ac.rs">Home</a></li>
+                    <li><a href="http://metropolitan.edu.rs/o-univerzitetu/">About</a></li>
+                </ul>
+            </div>
+        </div>
+    </footer>
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
