--- a/Musicstore/Musicstore/Views/Shared/_Layout.cshtml
+++ b/Musicstore/Musicstore/Views/Shared/_Layout.cshtml
@@ -29,19 +29,20 @@
             </div>
         </div>
     </div>
-    <div class="container body-content" style="height: 100%;">
+    <div class="container body-content">
         @RenderBody()
-    </div>
-    <footer class="container panel-footer">
-        <div class="row">
-            <div class="col-md-2 text-left">
-                <p class="margin-bottom-3"><strong>Publisher</strong></p>
+        <hr />
+        <footer>
+            <div id="padd-div" class="col-md-2 padding-left-0">
+                <p class="margin-bottom-3"><strong>Partners & Publishers</strong></p>
                 <ul class="list-unstyled text-muted">
-                    <li><a href="#">See publishers</a></li>
+                    <li><a href="#">List of publishers</a></li>
                     <li><a href="#">Are you a publisher?</a></li>
+                    <li><a href="#">List of partners</a></li>
+                    <li><a href="#">Become a partner</a></li>
                 </ul>
             </div>
-            <div class="col-md-2 text-left">
+            <div class="col-md-2">
                 <p class="margin-bottom-3"><strong>API</strong></p>
                 <ul class="list-unstyled text-muted">
                     <li><a href="#">Get API</a></li>
@@ -50,21 +51,22 @@
                     <li><a href="#">Any suggestions?</a></li>
                 </ul>
             </div>
-            <div class="col-md-2 text-left">
+            <div class="col-md-2">
                 <p class="margin-bottom-3"><strong>Music store</strong></p>
                 <ul class="list-unstyled text-muted">
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                 </ul>
             </div>
-            <div class="col-md-2 text-left">
-                <p class="margin-bottom-3"><strong>Partners</strong></p>
+            <div class="col-md-2">
+                <p class="margin-bottom-3"><strong>Social</strong></p>
                 <ul class="list-unstyled text-muted">
-                    <li><a href="#">List of partners</a></li>
-                    <li><a href="#">Become a partner</a></li>
+                    <li><a href="http://facebook.com">Facebook</a></li>
+                    <li><a href="http://twitter.com">Twitter</a></li>
+                    <li><a href="http://plus.google.com">Google+</a></li>
                 </ul>
             </div>
-            <div class="col-md-2 text-left">
+            <div class="col-md-2">
                 <p class="margin-bottom-3"><strong>Mobile</strong></p>
                 <ul class="list-unstyled text-muted">
                     <li><a href="#">Android</a></li>
@@ -72,17 +74,19 @@
                     <li><a href="#">Windows phone</a></li>
                 </ul>
             </div>
-            <div class="col-md-2 text-left">
+            <div class="col-md-2">
                 <p class="margin-bottom-3"><strong>Univerzitet Metropolitan</strong></p>
                 <ul class="list-unstyled text-muted">
-                    <li><a href="http://metropolitan.ac.rs">Home</a></li>
+                    <li><a href="http://metropolitan.ac.rs">Home page</a></li>
                     <li><a href="http://metropolitan.edu.rs/o-univerzitetu/">About</a></li>
                 </ul>
             </div>
-        </div>
-    </footer>
+        </footer>
+    </div>
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
+    @Scripts.Render("~/bundles/footer")
+    @Scripts.Render("~/bundles/helper")
     @RenderSection("scripts", required: false)
 </body>
 </html>
