--- a/Musicstore/Musicstore/Views/Home/Index.cshtml
+++ b/Musicstore/Musicstore/Views/Home/Index.cshtml
@@ -1,31 +1,61 @@
-﻿@{
+﻿@using Musicstore.ViewModels;
+@{
     ViewBag.Title = "Home Page";
 }
 
 <div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+    @*<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+            <!-- Indicators -->
+            <ol class="carousel-indicators">
+                <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+                <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+                <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+            </ol>
+
+            <!-- Wrapper for slides -->
+            <div class="carousel-inner">
+                <div class="item active">
+                    <img src="http://placehold.it/1200x315" alt="...">
+                    <div class="carousel-caption">
+                        <h3>Caption Text</h3>
+                    </div>
+                </div>
+                <div class="item">
+                    <img src="http://placehold.it/1200x315" alt="...">
+                    <div class="carousel-caption">
+                        <h3>Caption Text</h3>
+                    </div>
+                </div>
+                <div class="item">
+                    <img src="http://placehold.it/1200x315" alt="...">
+                    <div class="carousel-caption">
+                        <h3>Caption Text</h3>
+                    </div>
+                </div>
+            </div>
+        </div>*@
 </div>
+<div class="row"><h4 class="col-md-3">Categories</h4></div>
 
 <div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+
+    @foreach(CategoryViewModel c in ViewBag.Categories) {
+        <div class="col-sm-4">
+            <div class="category">
+                <a href="#">
+                    <img class="img-responsive" src="@c.ImageLink" />
+                    <p class="category-name text-center">@c.Name</p>
+                </a>
+            </div>
+        </div>
+    }
+    <div class="col-sm-4">
+        <div class="category">
+            <a href="#">
+                <img class="img-responsive" src="http://icons.iconarchive.com/icons/icons8/windows-8/512/Logos-Google-Web-Search-icon.png" />
+                <p class="category-name text-center">Search for songs</p>
+            </a>
+        </div>
     </div>
 </div>
+<br />
