--- a/Musicstore/Musicstore/Views/Manage/ManageLogins.cshtml
+++ b/Musicstore/Musicstore/Views/Manage/ManageLogins.cshtml
@@ -1,4 +1,4 @@
-﻿@model Musicstore.Models.ManageLoginsViewModel
+﻿@model Musicstore.ViewModels.ManageLoginsViewModel
 @using Microsoft.Owin.Security
 @{
     ViewBag.Title = "Manage your external logins";
