--- a/Musicstore/Musicstore/Views/Manage/SetPassword.cshtml
+++ b/Musicstore/Musicstore/Views/Manage/SetPassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model Musicstore.Models.SetPasswordViewModel
+﻿@model Musicstore.ViewModels.SetPasswordViewModel
 @{
     ViewBag.Title = "Create Password";
 }
