--- a/Musicstore/Musicstore/Views/Manage/VerifyPhoneNumber.cshtml
+++ b/Musicstore/Musicstore/Views/Manage/VerifyPhoneNumber.cshtml
@@ -1,4 +1,4 @@
-﻿@model Musicstore.Models.VerifyPhoneNumberViewModel
+﻿@model Musicstore.ViewModels.VerifyPhoneNumberViewModel
 @{
     ViewBag.Title = "Verify Phone Number";
 }
