--- a/Musicstore/Musicstore/Views/Home/Index.cshtml
+++ b/Musicstore/Musicstore/Views/Home/Index.cshtml
@@ -35,10 +35,10 @@
             </div>
         </div>*@
 </div>
-<div class="row"><h4 class="col-md-3">Categories</h4></div>
+<div class="row">
+<h4 class="col-md-3">Categories</h4></div>
 
 <div class="row">
-
     @foreach(CategoryViewModel c in ViewBag.Categories) {
         <div class="col-sm-4">
             <div class="category">
