--- a/Musicstore/Musicstore/Views/Manage/AddPhoneNumber.cshtml
+++ b/Musicstore/Musicstore/Views/Manage/AddPhoneNumber.cshtml
@@ -1,4 +1,4 @@
-﻿@model Musicstore.Models.AddPhoneNumberViewModel
+﻿@model Musicstore.ViewModels.AddPhoneNumberViewModel
 @{
     ViewBag.Title = "Phone Number";
 }
