--- a/Musicstore/Musicstore/Views/Publisher/Index.cshtml
+++ b/Musicstore/Musicstore/Views/Publisher/Index.cshtml
@@ -7,7 +7,7 @@
 <h2>@ViewBag.Title</h2>
 <br />
 @Html.ActionLink("Create New", "Create", null, new { @class = "btn btn-default margin-bottom-10" })
-<table class="table">
+<table class="table small">
     <tr>
         <th>
             @Html.DisplayNameFor(model => model.Name)
