--- a/Musicstore/Musicstore/Views/AdminPanel/ListUsers.cshtml
+++ b/Musicstore/Musicstore/Views/AdminPanel/ListUsers.cshtml
@@ -1,14 +1,9 @@
 ﻿@model IEnumerable<Musicstore.Models.User>
 
 @{
-    ViewBag.Title = "ListUsers";
+    ViewBag.Title = "List of users";
 }
 
-<h2>User list</h2>
-
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
 <table class="table">
     <tr>
         <th>
@@ -24,30 +19,30 @@
             Locked until
         </th>
         <th>
-            Operations
+            Actions
         </th>
     </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.UserName)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Email)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.PhoneNumber)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.LockoutEndDateUtc)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Details", "UserDetails", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
-        </td>
-    </tr>
-}
+    @foreach(var item in Model) {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.UserName)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Email)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.PhoneNumber)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.LockoutEndDateUtc)
+            </td>
+            <td>
+                @Html.ActionLink("Edit", "EditUser", new { id = item.Id }, new { @class = "btn-sm btn-warning" })
+                @Html.ActionLink("Details", "UserDetails", new { id = item.Id }, new { @class = "btn-sm btn-info" })
+                @Html.ActionLink("Delete", "DeleteUser", new { id = item.Id }, new { @class = "btn-sm btn-danger" })
+            </td>
+        </tr>
+    }
 
 </table>
