--- a/Musicstore/Musicstore/Views/Publisher/Create.cshtml
+++ b/Musicstore/Musicstore/Views/Publisher/Create.cshtml
@@ -4,15 +4,12 @@
     ViewBag.Title = "Create";
 }
 
-<h2>Create</h2>
-
-
 @using (Html.BeginForm()) 
 {
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>Publisher</h4>
+        <h3>Create publisher</h3>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
@@ -56,7 +53,7 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to List", "Index", null, new { @class = "btn-sm btn-primary" })
 </div>
 
 @section Scripts {
