--- a/Musicstore/Musicstore/Views/Publisher/Delete.cshtml
+++ b/Musicstore/Musicstore/Views/Publisher/Delete.cshtml
@@ -4,11 +4,8 @@
     ViewBag.Title = "Delete";
 }
 
-<h2>Delete</h2>
-
-<h3>Are you sure you want to delete this?</h3>
+<h3>Are you sure you want to delete @Html.DisplayFor(model => model.Name)?</h3>
 <div>
-    <h4>Publisher</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -49,8 +46,8 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            <input type="submit" value="Delete" class="btn-sm btn-danger" /> &nbsp;
+            @Html.ActionLink("Back to List", "Index", null, new { @class = "btn-sm btn-primary" })
         </div>
     }
 </div>
