--- a/Musicstore/Musicstore/Views/Publisher/Details.cshtml
+++ b/Musicstore/Musicstore/Views/Publisher/Details.cshtml
@@ -45,6 +45,6 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }, new { @class = "btn-sm btn-warning" }) &nbsp;
+    @Html.ActionLink("Back to List", "Index", null, new { @class = "btn-sm btn-primary" })
 </p>
