--- a/Musicstore/Musicstore/Views/Publisher/Edit.cshtml
+++ b/Musicstore/Musicstore/Views/Publisher/Edit.cshtml
@@ -4,15 +4,12 @@
     ViewBag.Title = "Edit";
 }
 
-<h2>Edit</h2>
-
-
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>Publisher</h4>
+        <h3>Edit</h3>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.Id)
@@ -58,7 +55,7 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to List", "Index", null, new { @class = "btn-sm btn-primary" })
 </div>
 
 @section Scripts {
