--- a/Musicstore/Musicstore/Views/Publisher/Index.cshtml
+++ b/Musicstore/Musicstore/Views/Publisher/Index.cshtml
@@ -6,8 +6,8 @@
 
 <h2>@ViewBag.Title</h2>
 <br />
-@Html.ActionLink("Create New", "Create", null, new { @class = "btn btn-default margin-bottom-10" })
-<table class="table small">
+@Html.ActionLink("Create New", "Create", null, new { @class = "btn btn-sm btn-default margin-bottom-10" })
+<table class="table">
     <tr>
         <th>
             @Html.DisplayNameFor(model => model.Name)
@@ -39,9 +39,9 @@
                 @Html.DisplayFor(modelItem => item.Address)
             </td>
             <td>
-                @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
-                @Html.ActionLink("Details", "Details", new { id = item.Id }) |
-                @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+                @Html.ActionLink("Edit", "Edit", new { id = item.Id }, new { @class = "btn btn-sm btn-warning" })
+                @Html.ActionLink("Details", "Details", new { id = item.Id }, new { @class = "btn btn-sm btn-info" })
+                @Html.ActionLink("Delete", "Delete", new { id = item.Id }, new { @class = "btn btn-sm btn-danger" })
             </td>
         </tr>
     }
