--- a/Musicstore/Musicstore/Views/AdminPanel/UserDetails.cshtml
+++ b/Musicstore/Musicstore/Views/AdminPanel/UserDetails.cshtml
@@ -71,7 +71,13 @@
         <dd>
             @Html.DisplayFor(model => model.LockoutEndDate)
         </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.Roles)
+        </dt>
 
+        <dd>
+            @Html.DisplayFor(model => model.Roles)
+        </dd>
     </dl>
 </div>
 <p>
