--- a/Musicstore/Musicstore/Views/AdminPanel/EditUser.cshtml
+++ b/Musicstore/Musicstore/Views/AdminPanel/EditUser.cshtml
@@ -6,10 +6,9 @@
 
 <h4>Edit user @Html.DisplayFor(model => model.UserName)</h4>
 
-@using (Html.BeginForm("EditUser", "AdminPanel", FormMethod.Post, new { @class = "form-horizontal" } ))
-{
+@using(Html.BeginForm("EditUser", "AdminPanel", FormMethod.Post, new { @class = "form-horizontal" })) {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
@@ -36,6 +35,14 @@
             <div class="col-md-10">
                 @Html.EditorFor(model => model.PhoneNumber, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.PhoneNumber, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.Roles, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.DropDownList("Role", Model.Roles, null, new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.Roles, "", new { @class = "text-danger" })
             </div>
         </div>
 
