--- a/Musicstore/Musicstore/Views/AdminPanel/Index.cshtml
+++ b/Musicstore/Musicstore/Views/AdminPanel/Index.cshtml
@@ -3,5 +3,4 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
-
+@Html.ActionLink("List users", "ListUsers", null, new { @class = "btn btn-primary"})
