--- a/Musicstore/Musicstore/Views/Publisher/Index.cshtml
+++ b/Musicstore/Musicstore/Views/Publisher/Index.cshtml
@@ -21,7 +21,11 @@
         <th>
             @Html.DisplayNameFor(model => model.Address)
         </th>
-        <th></th>
+        @if(User.IsInRole("Admin")) {
+            <th>
+                Actions
+            </th>
+        }
     </tr>
 
     @foreach(var item in Model) {
@@ -38,11 +42,13 @@
             <td>
                 @Html.DisplayFor(modelItem => item.Address)
             </td>
-            <td>
-                @Html.ActionLink("Edit", "Edit", new { id = item.Id }, new { @class = "btn btn-sm btn-warning" })
-                @Html.ActionLink("Details", "Details", new { id = item.Id }, new { @class = "btn btn-sm btn-info" })
-                @Html.ActionLink("Delete", "Delete", new { id = item.Id }, new { @class = "btn btn-sm btn-danger" })
-            </td>
+            @if(User.IsInRole("Admin")) {
+                <td>
+                    @Html.ActionLink("Edit", "Edit", new { id = item.Id }, new { @class = "btn btn-sm btn-warning" })
+                    @Html.ActionLink("Details", "Details", new { id = item.Id }, new { @class = "btn btn-sm btn-info" })
+                    @Html.ActionLink("Delete", "Delete", new { id = item.Id }, new { @class = "btn btn-sm btn-danger" })
+                </td>
+            }
         </tr>
     }
 
