Added ability to send emails. So reset password and confirm account are enabled. Yissssss

--- a/Musicstore/Musicstore/Content/Site.css
+++ b/Musicstore/Musicstore/Content/Site.css
@@ -154,3 +154,10 @@ footer {
 dl > dt {
     margin-bottom: 3px;
 }
+
+.radio input[type="radio"],
+.radio-inline input[type="radio"],
+.checkbox input[type="checkbox"],
+.checkbox-inline input[type="checkbox"] {
+    margin-left: unset !important;
+}
