--- a/Musicstore/Musicstore/Views/Account/ForgotPasswordConfirmation.cshtml
+++ b/Musicstore/Musicstore/Views/Account/ForgotPasswordConfirmation.cshtml
@@ -3,11 +3,9 @@
 }
 
 <hgroup class="title">
-    <h1>@ViewBag.Title.</h1>
+    <h1>Email send</h1>
 </hgroup>
 <div>
-    <p>
-        Please check your email to reset your password.
-    </p>
+    <h4>Please check your email addres. If you didnt receive the message contact support</h4>
 </div>
 	
