--- a/Musicstore/Musicstore/Views/Search/FindCategory.cshtml
+++ b/Musicstore/Musicstore/Views/Search/FindCategory.cshtml
@@ -35,7 +35,7 @@
             @Html.DisplayFor(modelItem => item.Length)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.Year)
+            @Html.DisplayFor(modelItem => item.Year.Year)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Genre)
