--- a/Musicstore/Musicstore/Views/AdminPanel/ListUsers.cshtml
+++ b/Musicstore/Musicstore/Views/AdminPanel/ListUsers.cshtml
@@ -4,45 +4,54 @@
     ViewBag.Title = "List of users";
 }
 
-<table class="table">
-    <tr>
-        <th>
-            Username
-        </th>
-        <th>
-            Email
-        </th>
-        <th>
-            Phone
-        </th>
-        <th>
-            Locked until
-        </th>
-        <th>
-            Actions
-        </th>
-    </tr>
-
-    @foreach(var item in Model) {
+<table class="table" id="dtable">
+    <thead>
         <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.UserName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Email)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.PhoneNumber)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.LockoutEndDateUtc)
-            </td>
-            <td>
-                @Html.ActionLink("Edit", "EditUser", new { id = item.Id }, new { @class = "btn-sm btn-warning" })
-                @Html.ActionLink("Details", "UserDetails", new { id = item.Id }, new { @class = "btn-sm btn-info" })
-                @Html.ActionLink("Delete", "DeleteUser", new { id = item.Id }, new { @class = "btn-sm btn-danger" })
-            </td>
+            <th>
+                Username
+            </th>
+            <th>
+                Email
+            </th>
+            <th>
+                Phone
+            </th>
+            <th>
+                Locked until
+            </th>
+            <th>
+                Actions
+            </th>
         </tr>
-    }
-
+    </thead>
+    <tbody>
+        @foreach(var item in Model) {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.UserName)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Email)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.PhoneNumber)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.LockoutEndDateUtc)
+                </td>
+                <td>
+                    @Html.ActionLink("Edit", "EditUser", new { id = item.Id }, new { @class = "btn-sm btn-warning" })
+                    @Html.ActionLink("Details", "UserDetails", new { id = item.Id }, new { @class = "btn-sm btn-info" })
+                    @Html.ActionLink("Delete", "DeleteUser", new { id = item.Id }, new { @class = "btn-sm btn-danger" })
+                </td>
+            </tr>
+        }
+    </tbody>
 </table>
+
+<script>
+    $(document).ready(function () {
+        alert("Hello");
+        $('#dtable').DataTable();
+    });
+</script>
