--- a/Musicstore/Musicstore/Views/AdminPanel/ListUsers.cshtml
+++ b/Musicstore/Musicstore/Views/AdminPanel/ListUsers.cshtml
@@ -50,7 +50,7 @@
 </table>
 
 <script>
-    $(function () {
+    $(document).ready(function () {
         $('#dtable').DataTable();
     });
 </script>
