--- a/Musicstore/Musicstore/Views/Home/Index.cshtml
+++ b/Musicstore/Musicstore/Views/Home/Index.cshtml
@@ -3,62 +3,57 @@
     ViewBag.Title = "Home Page";
 }
 
-<div class="jumbotron">
-    @*<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-            <!-- Indicators -->
-            <ol class="carousel-indicators">
-                <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-                <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-                <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-            </ol>
+<div id="carousel-main" class="carousel slide" data-ride="carousel">
+    <!-- Indicators -->
+    <ol class="carousel-indicators">
+        <li data-target="#carousel-main" data-slide-to="0" class="active"></li>
+        <li data-target="#carousel-main" data-slide-to="1"></li>
+        <li data-target="#carousel-main" data-slide-to="2"></li>
+        <li data-target="#carousel-main" data-slide-to="3"></li>
+        <li data-target="#carousel-main" data-slide-to="4"></li>
+        <li data-target="#carousel-main" data-slide-to="5"></li>
+    </ol>
 
-            <!-- Wrapper for slides -->
-            <div class="carousel-inner">
-                <div class="item active">
-                    <img src="http://placehold.it/1200x315" alt="...">
-                    <div class="carousel-caption">
-                        <h3>Caption Text</h3>
-                    </div>
-                </div>
-                <div class="item">
-                    <img src="http://placehold.it/1200x315" alt="...">
-                    <div class="carousel-caption">
-                        <h3>Caption Text</h3>
-                    </div>
-                </div>
-                <div class="item">
-                    <img src="http://placehold.it/1200x315" alt="...">
-                    <div class="carousel-caption">
-                        <h3>Caption Text</h3>
-                    </div>
-                </div>
-            </div>
-        </div>*@
+    <!-- Wrapper for slides -->
+    <div class="carousel-inner">
+        <div class="item active">
+            <img src="http://i.imgur.com/SkjnhpZ.jpg" alt="...">
+        </div>
+        <div class="item">
+            <img src="http://i.imgur.com/rhUSeHI.jpg" alt="...">
+        </div>
+        <div class="item">
+            <img src="http://i.imgur.com/9MKlv8W.jpg" alt="...">
+        </div>
+        <div class="item">
+            <img src="http://i.imgur.com/IQG7L1H.jpg" alt="...">
+        </div>
+        <div class="item">
+            <img src="http://i.imgur.com/NUCcAkw.jpg" alt="...">
+        </div>
+        <div class="item">
+            <img src="http://i.imgur.com/I11BP5I.jpg" alt="...">
+        </div>
+    </div>
 </div>
+<br /><br />
 <div class="row">
-    <h4 class="col-sm-3">Categories</h4>
+    <h4 class="col-sm-3 col-md-3 col-xs-3">Categories</h4>
 </div>
 
 <div class="row">
     @foreach(CategoryViewModel c in ViewBag.Categories) {
-        <div class="col-sm-4">
+        <div class="col-sm-4 col-md-4">
             <div class="category">
                 <a href="@Url.Action("FindCategory", "Search", new { q = c.Name})">
                     <span></span>
-                    <span class="text text-center">@c.Name</span>
+                    <span class="text">@c.Name</span>
                     <img class="img-responsive" src="@c.ImageLink" />
                 </a>
             </div>
-            <br /><br />
+            <br />
         </div>
     }
-    @*<div class="col-sm-4">
-            <div class="category">
-                <a href="#">
-                    <img class="img-responsive" src="http://i.imgur.com/Ucb1lUB.png" />
-                    <p class="category-name text-center">Search for songs</p>
-                </a>
-            </div>
-        </div>*@
+    <a href="#" class="pull-right padding-right-15"><h2>All categories</h2></a>
     <br />
 </div>
