--- a/Musicstore/Musicstore/Views/AdminPanel/Index.cshtml
+++ b/Musicstore/Musicstore/Views/AdminPanel/Index.cshtml
@@ -4,3 +4,4 @@
 }
 
 @Html.ActionLink("List users", "ListUsers", null, new { @class = "btn btn-primary"})
+@Html.ActionLink("List Publishers", "PublisherList", null, new { @class = "btn btn-primary" })
