--- a/Musicstore/Musicstore/Views/AdminPanel/PublisherList.cshtml
+++ b/Musicstore/Musicstore/Views/AdminPanel/PublisherList.cshtml
@@ -1,54 +1,51 @@
-﻿@model IEnumerable<Musicstore.Models.User>
-@using Musicstore.Models
+﻿@model IEnumerable<Musicstore.Models.Publisher>
+
 @{
-    ViewBag.Title = "List of users";
+    ViewBag.Title = "List of publishers";
 }
 
 <table class="table" id="dtable">
     <thead>
         <tr>
             <th>
-                Username
+                @Html.DisplayNameFor(model => model.Name)
             </th>
             <th>
-                Email
+                @Html.DisplayNameFor(model => model.Email)
             </th>
             <th>
-                Phone
+                @Html.DisplayNameFor(model => model.Phone)
             </th>
             <th>
-                Locked until
+                @Html.DisplayNameFor(model => model.Address)
             </th>
-            <th>
-                Actions
-            </th>
+            <th></th>
         </tr>
     </thead>
     <tbody>
         @foreach(var item in Model) {
             <tr>
                 <td>
-                    @Html.DisplayFor(modelItem => item.UserName)
+                    @Html.DisplayFor(modelItem => item.Name)
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.Email)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.PhoneNumber)
+                    @Html.DisplayFor(modelItem => item.Phone)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.LockoutEndDateUtc)
+                    @Html.DisplayFor(modelItem => item.Address)
                 </td>
                 <td>
-                    @Html.ActionLink("Edit", "EditUser", new { id = item.Id }, new { @class = "btn-sm btn-warning" })
-                    @Html.ActionLink("Details", "UserDetails", new { id = item.Id }, new { @class = "btn-sm btn-info" })
-                    @Html.ActionLink("Delete", "DeleteUser", new { id = item.Id }, new { @class = "btn-sm btn-danger" })
+                    @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
+                    @Html.ActionLink("Details", "Details", new { id = item.Id }) |
+                    @Html.ActionLink("Delete", "Delete", new { id = item.Id })
                 </td>
             </tr>
         }
     </tbody>
 </table>
-
 <script>
     $(document).ready(function () {
         $('#dtable').DataTable();
