--- a/Musicstore/Musicstore/Views/AdminPanel/ListUsers.cshtml
+++ b/Musicstore/Musicstore/Views/AdminPanel/ListUsers.cshtml
@@ -56,9 +56,6 @@
 </script>
 
 @section scripts{
-    <link href="~/content/datatables/css/datatables.bootstrap.min.css" rel="stylesheet" />
-    <link href="~/content/datatables/css/responsive.bootstrap.min.css" rel="stylesheet" />
-    <script src="~/scripts/datatables/jquery.datatables.min.js"></script>
-    <script src="~/scripts/datatables/datatables.bootstrap.min.js"></script>
-    <script src="~/scripts/datatables/datatables.responsive.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/s/bs-3.3.5/dt-1.10.10,r-2.0.0/datatables.min.css" />
+    <script type="text/javascript" src="https://cdn.datatables.net/s/bs-3.3.5/dt-1.10.10,r-2.0.0/datatables.min.js"></script>
 }
