--- a/Musicstore/Musicstore/Views/Shared/_Layout.cshtml
+++ b/Musicstore/Musicstore/Views/Shared/_Layout.cshtml
@@ -45,8 +45,8 @@
             <ul class="list-unstyled text-muted">
                 <li>@Html.ActionLink("List of publishers", "Index", "Publisher")</li>
                 <li><a href="#">Are you a publisher?</a></li>
-                <li><a href="#">List of partners</a></li>
-                <li><a href="#">Become a partner</a></li>
+                <li>@Html.ActionLink("List of partners", "PartnerList", "Home")</li>
+                <li>@Html.ActionLink("Become a partner", "PartnerProgram", "Home")</li>
             </ul>
         </div>
         <div class="col-md-2">
@@ -76,9 +76,9 @@
         <div class="col-md-2">
             <p class="margin-bottom-3"><strong>Mobile</strong></p>
             <ul class="list-unstyled text-muted">
-                <li><a href="#">Android</a></li>
-                <li><a href="#">iOS</a></li>
-                <li><a href="#">Windows phone</a></li>
+                <li><a href="https://play.google.com/store">Android</a></li>
+                <li><a href="https://itunes.apple.com/us/genre/ios/id36?mt=8">iOS</a></li>
+                <li><a href="https://www.microsoft.com/en-us/store/apps/windows-phone">Windows phone</a></li>
             </ul>
         </div>
         <div class="col-md-2">
