--- a/Musicstore/Musicstore/Views/AdminPanel/EditPerformer.cshtml
+++ b/Musicstore/Musicstore/Views/AdminPanel/EditPerformer.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Musicstore.Models.Performer
 
 @{
-    ViewBag.Title = "EditPerformer";
+    ViewBag.Title = "Edit performer";
 }
 
 @using (Html.BeginForm("EditPerformer", "AdminPanel", FormMethod.Post, new { enctype = "multipart/form-data" }))
