--- a/Musicstore/Musicstore/Views/AdminPanel/AddSong.cshtml
+++ b/Musicstore/Musicstore/Views/AdminPanel/AddSong.cshtml
@@ -13,8 +13,8 @@
         <div class="form-group">
             @Html.Label("Song", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                <input type="file" name="song" required/>
-                @Html.ValidationMessageFor(model => model.Link, "", new { @class = "text-danger" })
+                <input id="song" type="file" name="song" required/>
+                @Html.ValidationMessage("song", "Select song you want to upload", new { @class = "text-danger" })
             </div>
         </div>
 
@@ -23,6 +23,14 @@
             <div class="col-md-10">
                 @Html.DropDownListFor(model => model.CategoryId, new SelectList(Model.Categories, "Id", "Name"), "Select category", new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.CategoryId, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.PerformerId, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.DropDownListFor(model => model.PerformerId, new SelectList(Model.Performers, "Id", "Name"), "Select performer | Default: Unknown", new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.PerformerId, "", new { @class = "text-danger" })
             </div>
         </div>
 
@@ -41,10 +49,6 @@
         </div>
     </div>
 }
-
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
