--- a/Musicstore/Musicstore/Views/Home/PartnerProgram.cshtml
+++ b/Musicstore/Musicstore/Views/Home/PartnerProgram.cshtml
@@ -1,29 +1,87 @@
-﻿
+﻿@model Musicstore.Models.Partner
+<link href="~/content/kendo/2016.1.112/kendo.common.core.min.css" rel="stylesheet" />
+<link href="~/content/kendo/2016.1.112/kendo.common.min.css" rel="stylesheet" />
+<link href="~/content/kendo/2016.1.112/kendo.common-bootstrap.min.css" rel="stylesheet" />
+<link href="~/content/kendo/2016.1.112/kendo.bootstrap.min.css" rel="stylesheet" />
 @{
-    ViewBag.Title = "PartnerProgram";
+    ViewBag.Title = "Partner program";
 }
 
+@using (Html.BeginForm()) 
+{
+    @Html.AntiForgeryToken()
+    
+    <div class="form-horizontal">
+        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        <div class="form-group">
+            @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.Email, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
+            </div>
+        </div>
+        <input type="checkbox" class="k-checkbox" />
+        <div class="form-group">
+            @Html.LabelFor(model => model.Address, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Address, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Address, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.Phone, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Phone, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Phone, "", new { @class = "text-danger" })
+            </div>
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(model => model.Approved, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                <div class="checkbox">
+                    @Html.EditorFor(model => model.Approved)
+                    @Html.ValidationMessageFor(model => model.Approved, "", new { @class = "text-danger" })
+                </div>
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.DateCreated, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.DateCreated, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.DateCreated, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.DateModified, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.DateModified, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.DateModified, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            <div class="col-md-offset-2 col-md-10">
+                <input type="submit" value="Create" class="btn btn-default" />
+            </div>
+        </div>
+    </div>
+}
 
 <div>
-    Lorem ipsum dolor sit amet, eam suas causae definiebas eu, vim nusquam voluptatum ea. Tamquam disputando duo cu, eius dolor eirmod no eam, pri stet delicata ne. Ut pro sanctus dolorum appareat. Nibh tamquam feugiat sed no, iriure voluptatum posidonium usu et. Postea scripserit ex vix, qui an dolor everti mnesarchum.
-
-    Natum altera adversarium te sed. Ne fugit oportere urbanitas nec, id est dolor impedit praesent. His ex enim delenit. Est id nihil virtute vulputate. Eu iusto postulant intellegat usu, mea at legere officiis.
-
-    Dolorem forensibus deterruisset id est, id nam clita nusquam legendos. Idque soleat his an, usu quas ponderum suscipiantur an, mea ut munere eirmod. Luptatum consulatu eu pro. Duo ferri atqui no.
-
-    Congue pertinacia vim cu, vix patrioque accommodare ne. Ei quo quodsi verterem senserit. Sed an illud sapientem, te eius aliquip liberavisse per, laudem facete dolores sea an. Ad quidam mandamus iracundia mei. Vero errem soleat et vim, et debitis reprimique pro. In platonem argumentum cum, illum ubique id vix.
-
-    Sed mazim labore cotidieque te, cum ea nobis graeci. Cetero aperiam est ex. Quo ad nullam civibus, ad decore sapientem eam. Augue consequat at eos, ei omnes diceret splendide cum, est ei offendit efficiendi. Pri mucius impetus diceret an, eius labitur duo no, populo aperiri malorum pro id.
-
-    Eu vis falli vivendo neglegentur, id legere mediocrem concludaturque vix, qui ne consul tritani. Quas mucius menandri eu pri. Vis dolor utamur iisque id. Oportere intellegebat et ius, ad has libris apeirian molestiae.
-
-    Ea populo dolorum omittantur sea, per senserit prodesset et. Graece nusquam erroribus sit an, qui ne nostrud fierent theophrastus. Utroque facilisis dissentiunt vim ex, error blandit cu sea, quo ad diam iriure. Usu aperiri erroribus dissentias id, sea congue dicant repudiandae ne.
-
-    Vel eu nostrud fierent invidunt, an libris volumus persecuti ius, aeque latine evertitur per at. Quo no atomorum suavitate. Eu mel mazim soleat vituperatoribus. Vim at adhuc dicunt vituperatoribus.
-
-    Te vix modo perpetua. Nec minim labores id, an sea aeque tantas detracto, animal regione ne duo. Ut sea quis dictas consequat, no his mazim laudem, facer dicunt verear te eos. Eos eros solum praesent id, utinam elaboraret te sed.
-
-    Sea id dignissim hendrerit, vis in vidit accumsan atomorum. Mel ad singulis dissentias, at usu malorum intellegat, et his option audire dignissim. Alii suavitate argumentum duo no, usu ne accumsan omittantur, et vis tamquam accusamus gloriatur. At nec option dolores, ad sed bonorum fabulas. Mel at nibh falli impetus, cu diceret disputationi mei. Prodesset suscipiantur qui eu, assum paulo sea cu, regione apeirian cum no. Propriae tincidunt in his.
+    @Html.ActionLink("Back to List", "Index")
 </div>
 
-
+@section Scripts {
+    @Scripts.Render("~/bundles/jqueryval")
+}
